mongo-express-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: training
  name: mongo-express  
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: mongodb-express-service  
spec:
  selector:
    app: mongodb-express
  sessionAffinity: None
  type: ClusterIP    
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
