ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: training
  name: mongo-express-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mongodb-express.local
      http:
        paths:
          - path: /
            backend:            
              serviceName: mongodb-express-service
              servicePort: 8081
